test/expect/cmd.cc-paren-unbalanced-stderr.txt
^error: unbalanced parentheses after '--castxml-cc-gnu'

Usage: castxml .*$
